[tool.poetry]
name = "homework4"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
aioredis = "^1.3.1"
wgnlpy = "^0.1.4"
SQLAlchemy = "^1.4.11"
aiodnsresolver = "^0.0.151"
aioschedule = "^0.5.2"
schedule = "^1.1.0"
typer = "^0.3.2"
asyncpg = "^0.22.0"
aiosqlite = "^0.17.0"
fakeredis = "^1.5.0"
pytest-asyncio = "^0.15.1"
pytest-env = "^0.6.2"
websocket-client = "^0.58.0"
pytest-mock = "^3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
autoflake = "^1.4"
isort = "^5.7.0"
black = "^20.8b1"
unify = "^0.5"
flake8 = "^3.8.4"
pylint = "^2.7.1"
mypy = "^0.812"
pytest-deadfixtures = "^2.2.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
